# SimpleComputer

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  bc.sh  build.sh  format.sh  frame.sh  hexbigchars.txt  info.sh
.github/workflows/: main.yml
data/: sub.sb
include/: simple_computer.h  terminal.h
include/sc/: ALU.h  CU.h  bigchar.h  helper.h  interface.h  keys.h  ram-operations.h  terminal.h
src/libs/: ALU.c  CMakeLists.txt  CU.c  bigchar.c  helper.c  interface.c  keys.c  ram-operations.c  terminal.c
src/libs/ram-operations/: ram-operations.c
src/main/: CMakeLists.txt  main.c  sat.c  sbt.c
src/test/: CMakeLists.txt  main_test_ram-operations.c  test.c  test_bigchar.c  test_keys.c  test_ram-operations.c  test_signals.c  test_terminal.c
